testsuite/gsksl/errors/duplicate-block-member-name.glsl
uniform Foo {
  int x;
  int x;
};

void main()
{
}
